--- a/bot/eme/public/chat.html
+++ b/bot/eme/public/chat.html
@@ -4,6 +4,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="css/styles.css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body >
@@ -15,9 +16,6 @@
             </div>
             <div class="offline">
                 Offline! Reload to reconnect.
-            </div>
-            <div class="powered_by">
-              Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a>
             </div>
             <section>
                 <div id="message_list">
@@ -52,8 +50,8 @@
             </div>
             <footer>
                 <form onsubmit="Botkit.send(Botkit.input.value, event)">
-                    <input type="text" autocomplete="off" id="messenger_input" placeholder="Type here..." />
-                    <button type="submit">Send</button>
+                    <input type="text" autocomplete="off" id="messenger_input" placeholder="Escreva aqui..." />
+                    <button type="submit">Enviar</button>
                 </form>
             </footer>
         </div>
