--- a/web/public/404.html
+++ b/web/public/404.html
@@ -1,67 +1,198 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+	<meta http-equiv="Content-Type"
+	      content="text/html; charset=UTF-8"/>
+	<meta name="viewport"
+	      content="width=device-width, initial-scale=1, maximum-scale=1">
+	<title>Erro 404 - Página não encontrada!</title>
+	<style>
+		@charset "UTF-8";
+		/* CSS Document */
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+		body {
+			background: #fff;
+			padding: 0;
+			margin: 0;
+			font-family: Helvetica, Arial, sans-serif;
+		}
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+		.container {
+			background-color: #fff;
+			margin: 0 auto;
+			text-align: center;
+			padding-top: 50px;
+		}
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+		h3 {
+			font-size: 16px;
+			color: #3c3c3a;
+			font-weight: bold;
+			text-align: center;
+			line-height: 130%;
+		}
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
+		.buton {
+          background: #00AD54;
+          padding: 16px 26px;
+          color: #fff;
+          font-weight: bold;
+          text-align: center;
+          border-radius: 35px;
+          text-decoration: none;
+          font-size: 24px;
+		}
+
+		a:hover {
+
+		}
+
+		span {
+			font-size: 14px;
+			color: #FFF;
+			font-weight: normal;
+			text-align: center;
+		}
+
+		span a {
+			color: #FF0;
+			text-decoration: none;
+		}
+
+		span a:hover {
+			color: #F00;
+		}
+
+		svg {
+			max-width: 50vw;
+		}
+
+		@media screen and (max-width: 500px) {
+			svg {
+				max-width: 90vw;
+			}
+
+			img {
+				width: 70%;
+			}
+
+			.container {
+				padding: 70px 10px 10px 10px;
+			}
+
+			h3 {
+				font-size: 14px;
+			}
+		}
+	</style>
+
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+<body>
+<div class="container">
+	<svg xmlns="http://www.w3.org/2000/svg"
+	     viewBox="0 0 471.9195 339.9532">
+		<defs>
+			<clipPath id="a">
+				<path d="M68.1396 406.421H431.121V188.62H68.1396v217.801z"/>
+			</clipPath>
+			<clipPath id="b">
+				<path d="M0 500h500V0H0v500z"/>
+			</clipPath>
+		</defs>
+		<g fill="#00AD54"
+		   clip-path="url(#a)"
+		   transform="matrix(1.25 0 0 -1.25 -82.122 526.6791)">
+			<path d="M268.7715 387.145c-39.139-12.496-163.11 49.122-153.408-35.044 1.516-12.515 9.577-30.192 2.769-41.876-4.932-8.75-13.974-13.877-22.708-17.279-22.814-9.275-31.308-26.682-25.531-51.526 15.454-66.945 99.581-51.069 143.745-31.219 31.408 14.772 68.45 17.309 100.973 4.813 25.479-10.175 41.362-31.52 71.266-25.267 26.521 5.322 30.523 30.36 22.779 53.668-4.4 14.42-7.559 20.513 1.168 34.432 7.353 13.824 20.297 24.299 21.293 40.494.217 17.541-7.843 35.217-23.442 41.861-12.762 5.435-24.331 3.241-36.956 6.583-28.083 7.892-46.13 51.525-80.968 36.519-8.686-4.1-13.574-13.549-23.039-16.301"/>
+		</g>
+		<path fill="#00AD54"
+		      d="M236.1031 35.2344c4.4338 0 4.4338-6.875 0-6.875-4.4337 0-4.4337 6.875 0 6.875M32.4313 140.9375c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75M445.7906 195.7654c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75M212.9 31.7969c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75M459.5406 173.9374c11.5275 0 11.5275-17.875 0-17.875s-11.5275 17.875 0 17.875M9.2288 163.6249c11.5275 0 11.5275-17.875 0-17.875s-11.5275 17.875 0 17.875M390.7906 56.203c11.5275 0 11.5275-17.875 0-17.875s-11.5275 17.875 0 17.875M232.6656 20.625c13.3013 0 13.3013-20.625 0-20.625-13.3 0-13.3 20.625 0 20.625M466.932 190.0929c6.65 0 6.65-10.3125 0-10.3125s-6.65 10.3125 0 10.3125M6.8221 134.9219c6.65 0 6.65-10.3125 0-10.3125s-6.65 10.3125 0 10.3125M412.275 66.1719c6.65 0 6.65-10.3125 0-10.3125s-6.65 10.3125 0 10.3125M410.5562 47.2656c4.4338 0 4.4338-6.875 0-6.875-4.4337 0-4.4337 6.875 0 6.875M62.3385 35.4054c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75M453.525 272.4225c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75M6.6506 278.4381c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75M82.9635 25.0929c4.4338 0 4.4338-6.875 0-6.875-4.4337 0-4.4337 6.875 0 6.875M454.3844 244.9225c4.4337 0 4.4337-6.875 0-6.875-4.4338 0-4.4338 6.875 0 6.875M27.275 287.0319c4.4338 0 4.4338-6.875 0-6.875-4.4337 0-4.4337 6.875 0 6.875"/>
+		<path fill="#1c1c1b"
+		      d="M125.4176 171.2788c-4.6312 1.6362-7.6887 1.9487-10.0612-2.735-1.8275-3.6075-3.0463-7.3313-5.3463-10.7075-4.985-7.3188-9.8125-7.8088-17.795-6.7663-7.9225 1.0338-18.73-.99-19.9325-10.1512-.8562-6.53-.9062-12.5338-3.7662-18.6425-1.4075-3.0088-5.8525-.39-4.4513 2.6025 3.1713 6.7787 1.785 14.1575 4.1063 21.0612 2.3537 7.005 10.1962 9.2638 16.7875 10.0513 4.9812.5937 9.3425-.6075 14.2262-.6025 5.245.0062 8.8263 9.0037 10.4888 12.9525 3.465 8.235 8.3737 10.9975 17.115 7.91 3.1125-1.1 1.7725-6.0825-1.3713-4.9725"/>
+		<path fill="#1c1c1b"
+		      d="M70.9274 115.3174c-1.5438 2.0225-3.4313 3.285-5.6775 4.4162-2.3763 1.1975-.2863 4.755 2.0825 3.5625 2.92-1.4712 5.1687-3.2925 7.1575-5.8962.6837-.8963.14-2.3063-.74-2.8225-1.0613-.62-2.1413-.1513-2.8225.74"/>
+		<path fill="#1c1c1b"
+		      d="M63.5415 109.8279c.0113 4.3612.6475 8.6987.6875 13.0625.0238 2.6587 4.1488 2.6612 4.125 0-.04-4.3638-.6762-8.7013-.6875-13.0625-.0075-2.66-4.1325-2.66-4.125 0"/>
+		<path fill="#1c1c1b"
+		      d="M56.5835 114.0362c2.76 3.45 5.5625 6.8925 9.3538 9.26 2.2637 1.4125 4.3325-2.1575 2.0825-3.5625-3.4613-2.1612-6.0025-5.4675-8.52-8.6137-1.6625-2.0775-4.56.8612-2.9163 2.9162"/>
+		<path fill="#1c1c1b"
+		      d="M53.146 120.2229c3.8375 3.6287 8.6213 4.8312 13.6938 3.2812 2.5362-.775 1.4537-4.7575-1.0963-3.9787-3.6625 1.12-6.8787.43-9.6812-2.2188-1.93-1.8262-4.8525 1.0863-2.9163 2.9163M336.307 184.0772c.185-6.7387 2.4375-8.9862 8.9425-9.5162 4.2262-.345 8.5137-.2875 12.6937-1.065 6.3788-1.1888 6.26-9.9888 8.7288-14.5288 3.77-6.9375 13.8975-6.2 20.4338-8.2487 7.2-2.2575 9.9637-8.3538 10.3887-15.4538.1988-3.3225-4.9587-3.3037-5.1562 0-.6325 10.5625-8.3788 10.93-16.8875 12.6813-7.5 1.5425-12.5788 5.6537-15.1863 12.8812-.8162 2.2613-1.015 6.9775-3.6925 7.6963-4.36 1.17-9.3787.635-13.865 1.1212-8.43.9138-11.335 6.4325-11.5562 14.4325-.0913 3.3275 5.065 3.3175 5.1562 0"/>
+		<path fill="#1c1c1b"
+		      d="M385.3646 128.938c1.7625 4.2025 4.8 7.2412 9.0038 9.0037 1.0387.435 2.2687-.4625 2.5362-1.4412.3275-1.1888-.4037-2.1025-1.44-2.5375-2.7112-1.1363-4.985-3.41-6.1225-6.1213-.435-1.0362-1.3475-1.7687-2.5375-1.4412-.9787.27-1.8762 1.4987-1.44 2.5375"/>
+		<path fill="#1c1c1b"
+		      d="M391.4779 123.5779v10.3125c0 2.66 4.1262 2.66 4.1262 0v-10.3125c0-2.66-4.1262-2.66-4.1262 0"/>
+		<path fill="#1c1c1b"
+		      d="M398.4274 124.4044c-1.25 3.6062-3.4088 6.32-6.345 8.715-2.0625 1.6825.875 4.5825 2.9175 2.9162 3.4962-2.8525 5.925-6.2675 7.405-10.535.8737-2.52-3.1125-3.5937-3.9775-1.0962"/>
+		<path fill="#1c1c1b"
+		      d="M403.4481 128.7244c-1.7962 2.8487-4.6362 4.6687-7.705 5.9275-2.4262.995-1.3662 4.9862 1.0963 3.9775 4.11-1.685 7.7575-3.9963 10.1712-7.8225 1.4225-2.2575-2.1475-4.325-3.5625-2.0825"/>
+		<path fill="#b4b4b4"
+		      d="M360.8883 258.7849c0 3.6075-27.005 4.655-29.9238 4.655H128.8683c-2.915 0-29.925-1.0475-29.925-4.655l24.6437-36.94c0-3.6075 2.3663-6.5313 5.2813-6.5313h202.0962c2.9188 0 5.2813 2.9238 5.2813 6.5313l24.6425 36.94z"/>
+		<path fill="#3c3c3a"
+		      d="M188.3553 250.5561h-51.94l9.0887-22h46.9775l-4.1263 22zM271.4766 250.5561h51.94l-9.0912-22h-46.975l4.1262 22zM329.189 250.5561h18.29l-14.9662-22h-13.7975l10.4737 22zM130.6454 250.5561H112.354l14.9675-22h13.795l-10.4712 22zM266.9075 250.5561h-73.985l4.125-22h65.735l4.125 22z"/>
+		<path fill="#b4b4b4"
+		      d="M342.9655 235.9391H116.868v-3.3675h226.0975v3.3675zM345.4167 244.1891h-231v-3.3675h231v3.3675z"/>
+		<path fill="#3c3c3a"
+		      d="M362.2713 267.3407c0 2.9163-.6038 5.28-3.5175 5.28H101.08c-2.9188 0-3.52-2.3637-3.52-5.28v-4.5275c0-2.9162.6012-5.28 3.52-5.28h257.6738c2.9137 0 3.5175 2.3638 3.5175 5.28v4.5275z"/>
+		<path fill="#707070"
+		      d="M278.2125 265.2033c0 1.5187-1.23 2.75-2.7487 2.75H184.37c-1.52 0-2.75-1.2313-2.75-2.75 0-1.5188 1.23-2.75 2.75-2.75h91.0938c1.5187 0 2.7487 1.2312 2.7487 2.75"/>
+		<path fill="#3c3c3a"
+		      d="M338.8851 216.8586c0 2.9163-2.3637 5.2825-5.2825 5.2825H126.229c-2.9175 0-5.2825-2.3662-5.2825-5.2825V81.5674c0-2.9163 2.365-5.2813 5.2825-5.2813h207.3737c2.9188 0 5.2825 2.365 5.2825 5.2813v135.2912z"/>
+		<path fill="#fff"
+		      d="M229.9166 83.6322c2.8388 0 2.8388-4.4012 0-4.4012-2.8387 0-2.8387 4.4012 0 4.4012M323.63 208.3545c0 2.5088-2.0337 4.5425-4.54 4.5425H140.7438c-2.5063 0-4.5426-2.0337-4.5426-4.5425V92.0083c0-2.5088 2.0363-4.5426 4.5425-4.5426H319.09c2.5063 0 4.54 2.0338 4.54 4.5426v116.3462z"/>
+		<path fill="none"
+		      stroke="#325975"
+		      stroke-linecap="round"
+		      stroke-linejoin="round"
+		      stroke-miterlimit="10"
+		      stroke-width="4.125"
+		      d="M202.6326 134.6241l-15.5575 15.555M202.6326 150.1819l-15.5562-15.5563M272.7571 134.6241l-15.5575 15.555M272.7571 150.1819l-15.555-15.5563"/>
+		<path fill="#f29bb4"
+		      d="M265.7747 168.9526v15.3538c0 3.0387-2.4637 5.5012-5.5 5.5012h-2.9662c-3.0375 0-5.5012-2.4625-5.5012-5.5012v-15.3538"/>
+		<path fill="#ef82a2"
+		      d="M261.2033 169.7546l-2.4125 17.875-2.4113-17.875h4.8238z"/>
+		<path fill="none"
+		      stroke="#325975"
+		      stroke-linecap="round"
+		      stroke-linejoin="round"
+		      stroke-miterlimit="10"
+		      stroke-width="3.4375"
+		      d="M183.2991 168.9356h93.2338"/>
+		<path fill="#f7c3d2"
+		      d="M168.0416 166.6614c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75M291.7916 166.6614c8.8675 0 8.8675-13.75 0-13.75s-8.8675 13.75 0 13.75"/>
+		<path fill="#f29101"
+		      d="M303.4786 58.2654v45.375c0 4.4337 6.875 4.4337 6.875 0v-45.375c0-4.4338-6.875-4.4338-6.875 0M306.9161 121.1719c6.65 0 6.65-10.3125 0-10.3125s-6.65 10.3125 0 10.3125"/>
+		<g fill="transparent"
+		   clip-path="url(#b)"
+		   transform="matrix(1.25 0 0 -1.25 -82.122 526.6791)">
+			<path d="M323.1504 158.1807c0-4.859-3.939-8.8-8.801-8.8h-128.699c-4.861 0-8.801 3.941-8.801 8.8v17.6c0 4.86 3.94 8.8 8.801 8.8h128.699c4.862 0 8.801-3.94 8.801-8.8v-17.6z"/>
+		</g>
+<!--		<g style="-inkscape-font-specification:Asap-Medium">-->
+<!--			<path fill="#3c3c3a"-->
+<!--			      d="M298.4442 320.2914v8.9805h-2.511v-21.5945h5.923q3.9733 0 5.864 1.5214 1.9053 1.5214 1.9053 4.5789 0 4.2834-4.3425 5.79l5.8639 9.7042h-2.9689l-5.2287-8.9805h-4.505zm0-2.1565h3.4416q2.6587 0 3.8994-1.0487 1.2407-1.0634 1.2407-3.1756 0-2.1417-1.2703-3.087-1.2555-.9454-4.047-.9454h-3.2644v8.2567zm-7.3409.3102q0 5.1845-2.6292 8.1533-2.6143 2.969-7.2818 2.969-4.7709 0-7.3705-2.9099-2.5848-2.9245-2.5848-8.242 0-5.273 2.5996-8.168 2.5996-2.9098 7.3852-2.9098 4.6527 0 7.2671 2.9541t2.6144 8.1533zm-17.2076 0q0 4.3869 1.861 6.6615 1.8759 2.26 5.4356 2.26 3.5892 0 5.4208-2.26 1.8315-2.2599 1.8315-6.6615 0-4.3573-1.8315-6.6024-1.8168-2.2599-5.3913-2.2599-3.5892 0-5.465 2.2747-1.8611 2.2599-1.8611 6.5876zm-17.7542 1.8463v8.9805h-2.511v-21.5945h5.923q3.9733 0 5.8639 1.5214 1.9054 1.5214 1.9054 4.5789 0 4.2834-4.3425 5.79l5.8638 9.7042h-2.9688l-5.2288-8.9805h-4.505zm0-2.1565h3.4415q2.6587 0 3.8994-1.0487 1.2408-1.0634 1.2408-3.1756 0-2.1417-1.2703-3.087-1.2555-.9454-4.0471-.9454h-3.2643v8.2567zm-18.729 2.1565v8.9805h-2.511v-21.5945h5.923q3.9733 0 5.8639 1.5214 1.9054 1.5214 1.9054 4.5789 0 4.2834-4.3426 5.79l5.864 9.7042h-2.969l-5.2287-8.9805h-4.505zm0-2.1565h3.4415q2.6587 0 3.8994-1.0487 1.2408-1.0634 1.2408-3.1756 0-2.1417-1.2703-3.087-1.2555-.9454-4.0471-.9454h-3.2643v8.2567zm-7.3114 11.137h-12.038v-21.5945h12.038v2.2304h-9.527v6.9569h8.951v2.2156h-8.951v7.9465h9.527v2.2451zm-23.3226-4.4755h-2.5996v4.4755h-4.4607v-4.4755h-9.2168v-3.1756l9.4679-13.9434h4.2096v13.5741h2.5996v3.545zm-7.0603-3.5449v-3.663q0-.9158.0738-2.6588.0739-1.7429.1181-2.0235h-.1181q-.5465 1.2112-1.3146 2.3633l-3.9585 5.982h5.1992zm-10.7973-2.7768q0 5.657-1.861 8.3748-1.8464 2.7178-5.7015 2.7178-3.737 0-5.6423-2.8064-1.8906-2.8064-1.8906-8.2862 0-5.7162 1.8463-8.4192 1.8463-2.7178 5.6866-2.7178 3.737 0 5.6424 2.836 1.9201 2.8359 1.9201 8.301zm-10.5609 0q0 3.9732.6795 5.7014.6942 1.7134 2.319 1.7134 1.5951 0 2.3041-1.743.709-1.7429.709-5.6718 0-3.9733-.7237-5.7015-.709-1.7429-2.2895-1.7429-1.61 0-2.3042 1.743-.6942 1.7281-.6942 5.7014zm-6.0854 6.3217h-2.5997v4.4755h-4.4606v-4.4755h-9.2168v-3.1756l9.4679-13.9434h4.2095v13.5741h2.5997v3.545zm-7.0603-3.5449v-3.663q0-.9158.0738-2.6588.0739-1.7429.1181-2.0235h-.1181q-.5465 1.2112-1.3146 2.3633l-3.9585 5.982h5.1992z"-->
+<!--			      font-family="Open Sans"-->
+<!--			      font-size="30.25"-->
+<!--			      font-weight="400"-->
+<!--			      style="-inkscape-font-specification:'Open Sans'"/>-->
+<!--		</g>-->
+		<text x="269.7107"
+		      y="595.7732"
+		      font-family="sans-serif"
+		      font-size="40"
+		      font-weight="400"
+		      letter-spacing="0"
+		      style="line-height:125%"
+		      transform="translate(-141.0506 -223.8973)"
+		      word-spacing="0"/>
+	</svg>
+	<br/>
+	<h3>ERRO 404 - Não foi possível achar esta página
+		<br/> Volte para o início clicando abaixo
+	</h3>
+	<br/>
+	<a class="buton"
+	   href="https://alegreme.com">www.alegreme.com</a>
+</div>
 </body>
+
 </html>
